2007-05-15  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/scheduler.py (ICalScheduler.__init__):
	Watch the ical file for changes. Untested, woo.

2007-05-15  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlist.py:
	  Never schedule an item for the past or very recent future. Allow
	  scheduling something 5 seconds or more in the future.

	* flumotion/component/producers/playlist/playlistparser.py:
	  Fix duration adjustment for inserting new items.

2007-05-15  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/watcher.py: Update copyrights.

	* flumotion/component/base/base.xml: 
	* flumotion/component/base/Makefile.am (component_PYTHON): 
	* flumotion/component/base/watcher.py: New module, defines a file
	monitoring object.

	* flumotion/test/Makefile.am (EXTRA_DIST): 
	* flumotion/test/test_component_base_watcher.py: Add a minimal test.

2007-05-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/basicwatchdog.py
	  (SingleBasicWatchdog.eaterSetInactive,
	  SingleBasicWatchdog.eaterSetActive, AVBasicWatchdog,
	  AVBasicWatchdog.eaterSetInactive, AVBasicWatchdog.eaterSetActive,
	  AVBasicWatchdog.isActive):
	* flumotion/component/combiners/switch/switch.py (Switch.isActive,
	  SingleSwitch, SingleSwitch.switchToMaster,
	  SingleSwitch.switchToBackup, AVSwitch.switchToMaster,
	  AVSwitch.switchToBackup, AVSwitch._setLastTimestamp):
	Set the stop value on the switches so that the resulting stream
	is synched if video or audio stops before the other.
	Do not allow switching to master or backup if eaters are inactive.

2007-05-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/main.py (startAdminFromGreeter.failed): This
	is the bug that zapek found, yall. Remember this bug!

	* flumotion/component/base/scheduler.py (Scheduler.addEvent): Add
	a now argument.
	(Scheduler.getCurrentEvents): New accessor.